--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="timer-container">
                 <div id="timer" class="timer"></div>
-                <p id="timer-message" class="timer-message">Подождите, пока таймер дойдет до конца.</p>
-                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
+                <p id="timer-message" class="timer-message">Нажмите кнопку ниже</p>
+                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать</a>
             </div>
         </div>
     </main>
