--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://www.youtube.com" target="_blank" class="social-icon">
+            <a href="https://www.youtube.com/@Neco_off" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/youtube-play.png" alt="YouTube">
             </a>
-            <a href="https://www.tiktok.com" target="_blank" class="social-icon">
+            <a href="https://www.tiktok.com/@lyma_profs?_t=8p5jtcHfAuI&_r=1" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/tiktok.png" alt="TikTok">
             </a>
-            <a href="https://telegram.org" target="_blank" class="social-icon">
+            <a href="https://t.me/KuberNeko" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/telegram-app.png" alt="Telegram">
             </a>
         </div>
