--- a/index.html
+++ b/index.html
@@ -6,116 +6,31 @@
     <title>Спасибо❤️</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Основные стили для страницы */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        header, footer {
-            width: 100%;
-            background-color: #007bff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        .banner img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        main {
-            flex: 1;
-            width: 100%;
-            max-width: 800px;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .support-message {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
+        /* Простейшие стили для таймера и кнопки */
         .timer-container {
-            width: 100%;
-            max-width: 600px;
-            padding: 20px;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            margin: 20px;
         }
-
         .timer {
-            width: 100%;
+            width: 0;
             height: 20px;
             background: linear-gradient(90deg, rgba(255,105,180, 0), rgba(0,250,154, 0));
             transition: width 0.05s linear;
-            border-radius: 10px;
-            overflow: hidden;
         }
-
         .timer-message {
             margin-top: 10px;
         }
-
         .download-btn {
-            margin-top: 20px;
-            padding: 10px 30px;
-            background-color: #28a745;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             display: inline-block;
-            transition: background-color 0.3s ease;
         }
-
-        .download-btn:hover {
-            background-color: #218838;
-        }
-
         .download-btn:disabled {
             background-color: #ccc;
             cursor: not-allowed;
-        }
-
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .social-icon img {
-            width: 30px;
-            height: 30px;
-            transition: transform 0.3s ease;
-        }
-
-        .social-icon:hover img {
-            transform: scale(1.1);
-        }
-
-        @media (max-width: 600px) {
-            .timer-container {
-                padding: 15px;
-            }
-
-            .download-btn {
-                padding: 10px 20px;
-            }
         }
     </style>
 </head>
@@ -127,6 +42,8 @@
             </div>
         </a>
     </header>
+
+    <hr class="divider">
 
     <main>
         <div class="content">
@@ -158,6 +75,7 @@
     <script>
         async function getModLink(modId) {
             try {
+                // Путь к вашему JSON-файлу на GitHub Pages
                 const response = await fetch('https://404-anarhist-404.github.io/link-manager/links.json');
                 if (!response.ok) {
                     throw new Error('Сеть ответила с ошибкой.');
@@ -171,20 +89,22 @@
         }
 
         async function startTimer(event) {
-            event.preventDefault();
+            event.preventDefault(); // Предотвращение перехода по ссылке до завершения таймера
             const timer = document.getElementById('timer');
             const timerMessage = document.getElementById('timer-message');
             const downloadBtn = document.getElementById('download-btn');
             let width = 0;
 
+            // Получение параметра 'link' из URL
             const urlParams = new URLSearchParams(window.location.search);
-            const modId = urlParams.get('link');
+            const modId = urlParams.get('link'); // Получение ID мода из параметра 'link'
             if (!modId) {
                 timerMessage.textContent = 'Ошибка: ID мода не найден в параметре URL.';
                 return;
             }
 
-            const modLink = await getModLink(modId);
+            const modLink = await getModLink(modId); // Получение ссылки из JSON
+
             if (!modLink) {
                 timerMessage.textContent = 'Ошибка при получении ссылки. Попробуйте позже.';
                 return;
@@ -198,21 +118,21 @@
                     timer.style.display = 'none';
                     timerMessage.textContent = 'Вы можете перейти по ссылке.';
                     downloadBtn.disabled = false;
-                    downloadBtn.href = modLink;
+                    downloadBtn.href = modLink; // Установка ссылки
+                    // Автоматическое перенаправление через 1 секунду
                     setTimeout(() => {
                         window.location.href = modLink;
-                    }, 1000);
+                    }, 1000); // 1 секунда задержки
                 } else {
                     width++;
                     timer.style.width = width + '%';
-                    timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
+                    timer.style.background = linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}));
                 }
-            }, 50);
+            }, 50); // 5 секунд / 100 шагов = 50 миллисекунд на шаг
         }
     </script>
 </body>
 </html>
-
 
 
 
