--- a/index.html
+++ b/index.html
@@ -5,34 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спасибо❤️</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Простейшие стили для таймера и кнопки */
-        .timer-container {
-            margin: 20px;
-        }
-        .timer {
-            width: 0;
-            height: 20px;
-            background: linear-gradient(90deg, rgba(255,105,180, 0), rgba(0,250,154, 0));
-            transition: width 0.05s linear;
-        }
-        .timer-message {
-            margin-top: 10px;
-        }
-        .download-btn {
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            display: inline-block;
-        }
-        .download-btn:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -52,40 +24,32 @@
             </div>
             <div class="timer-container">
                 <div id="timer" class="timer"></div>
-                <p id="timer-message" class="timer-message">Нажмите кнопку ниже</p>
-                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать</a>
+                <p id="timer-message" class="timer-message">Подождите, пока таймер дойдет до конца.</p>
+                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
             </div>
         </div>
     </main>
 
     <footer>
         <div class="social-links">
-            <a href="https://www.youtube.com/@Neco_off" target="_blank" class="social-icon">
+            <a href="https://www.youtube.com" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/youtube-play.png" alt="YouTube">
             </a>
-            <a href="https://www.tiktok.com/@lyma_profs?_t=8p5jtcHfAuI&_r=1" target="_blank" class="social-icon">
+            <a href="https://www.tiktok.com" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/tiktok.png" alt="TikTok">
             </a>
-            <a href="https://t.me/KuberNeko" target="_blank" class="social-icon">
+            <a href="https://telegram.org" target="_blank" class="social-icon">
                 <img src="https://img.icons8.com/ios/50/ffffff/telegram-app.png" alt="Telegram">
             </a>
         </div>
     </footer>
 
     <script>
+        // Функция для получения ссылки из JSON-файла на GitHub
         async function getModLink(modId) {
-            try {
-                // Путь к вашему JSON-файлу на GitHub Pages
-                const response = await fetch('https://404-anarhist-404.github.io/link-manager/links.json');
-                if (!response.ok) {
-                    throw new Error('Сеть ответила с ошибкой.');
-                }
-                const data = await response.json();
-                return data[modId];
-            } catch (error) {
-                console.error('Ошибка получения ссылки:', error);
-                return null;
-            }
+            const response = await fetch('https://404-anarhist-404.github.io/link-manager/links.json');
+            const data = await response.json();
+            return data[modId];
         }
 
         async function startTimer(event) {
@@ -95,20 +59,8 @@
             const downloadBtn = document.getElementById('download-btn');
             let width = 0;
 
-            // Получение параметра 'link' из URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const modId = urlParams.get('link'); // Получение ID мода из параметра 'link'
-            if (!modId) {
-                timerMessage.textContent = 'Ошибка: ID мода не найден в параметре URL.';
-                return;
-            }
-
-            const modLink = await getModLink(modId); // Получение ссылки из JSON
-
-            if (!modLink) {
-                timerMessage.textContent = 'Ошибка при получении ссылки. Попробуйте позже.';
-                return;
-            }
+            const modId = 'sildurs'; // Установите нужный ID мода
+            const modLink = await getModLink(modId); // Получение ссылки
 
             downloadBtn.disabled = true;
 
@@ -116,24 +68,19 @@
                 if (width >= 100) {
                     clearInterval(interval);
                     timer.style.display = 'none';
-                    timerMessage.textContent = 'Вы можете перейти по ссылке.';
+                    timerMessage.textContent = 'Теперь вы можете перейти по ссылке.';
                     downloadBtn.disabled = false;
                     downloadBtn.href = modLink; // Установка ссылки
-                    // Автоматическое перенаправление через 1 секунду
-                    setTimeout(() => {
-                        window.location.href = modLink;
-                    }, 1000); // 1 секунда задержки
                 } else {
                     width++;
                     timer.style.width = width + '%';
-                    timer.style.background = linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}));
+                    timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
                 }
             }, 50); // 5 секунд / 100 шагов = 50 миллисекунд на шаг
         }
     </script>
 </body>
 </html>
-
 
 
 
